--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Vue</h1>
       </header>
 
+      <h2>Table of contents</h2>
       <ul>
         <li><a class="nav-link" href="#A_clearer_Vue">A clearer Vue</a></li>
         <li><a class="nav-link" href="#Installation">Installation</a></li>
@@ -25,6 +26,8 @@
         <li><a class="nav-link" href="#Making_a_couple_of_changes">Making a couple of changes</a></li>
       </ul>
   </nav>
+
+  <div class=divider"></div>
 
     <main id="main-doc">
       <section id="A_clearer_Vue" class="main-section">
