--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a class="nav-link" href="#App.vue">App.vue</a></li>
         <li><a class="nav-link" href="#Running_the_app_locally">Running the app locally</a></li>
         <li><a class="nav-link" href="#Making_a_couple_of_changes">Making a couple of changes</a></li>
+        <li><a class="nav-link" href="#References">References</a></li>
       </ul>
   </nav>
 
@@ -475,6 +476,12 @@ export default {
           </code>
 
           <p><code>App.vue</code> will now show our heading, as you'd expect.</p>
+      </section>
+
+      <section id="References" class="main-section">
+        <header><h2>References</h2></header>
+
+        <p>This content was copied entirely from <a href="https://developer.mozilla.org/en" target="_blank">MDN</a>. If you want to follow the rest of the tutorial, checkout the <a href="https://developer.mozilla.org/en/docs/Learn/Tools_and_testing/Client-side_JavaScript_frameworks/Vue_getting_started" target="_blank">original article</a>.</p>
       </section>
     </main>
   </body>
